# marketing-war-command-center

./: README.md  TWILIO_INBOUND_2024_MARCH.xlsx  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy.yml
desktop-companion/: Cargo.toml  README.md
desktop-companion/src/: main.rs
docs/: ci-integration.md  lead-intelligence-spec.md  repo-consolidation.md  sharing-files.md  skin-showcase.md  twilio-launch-runbook.md  vercel-deployment.md
docs/email-templates/: dental-precare-templates.md
docs/rcs-templates/: petcare-rcs-templates.md
src/: App.tsx  index.css
src/components/: CampaignCreator.tsx  Dashboard.tsx  FlexAccountManager.tsx  LaunchChecklist.tsx  Layout.tsx  MarketingJourneyBuilder.tsx  Sidebar.tsx  SkinSelector.tsx  ThemeSelector.tsx  TwilioConfig.tsx  TwilioWorkflowManager.tsx
src/data/: dentalTemplates.ts  petcareRcsTemplates.ts
src/hooks/: useLeadIngestion.ts  useSkin.tsx
src/lib/: preferences.ts  skins.ts  supabaseClient.ts
src/pages/: Campaigns.tsx  ClientPreviewShowcase.tsx  CreateCampaign.tsx  DncUpload.tsx  Financials.tsx  FlexManagement.tsx  GoToMarketPipeline.tsx  JourneyBuilder.tsx  LeadIntelligence.tsx  SettingsPage.tsx  TemplateGallery.tsx  WebDevelopment.tsx  WorkflowManager.tsx
src/themes/: applyTheme.ts  presets.ts
supabase/: README.md
supabase/migrations/: 20241010120000_build_pipeline_schema.sql  20241010121000_failed_build_alerts.sql  20241010123000_financial_command.sql  20241011130000_user_preferences_skin.sql  20241015090000_lead_ingestion_tables.sql
(+12 files in other folders)
