[package]
name = "desktop-companion"
version = "0.1.0"
edition = "2021"
description = "Local build log watcher that forwards telemetry to the Supabase report-build function"
authors = ["Marketing War Command Center Automation"]
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
notify = "6.1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
